samples/_failures_safe/1761459766_a75d3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c221167.c: In function ‘main’:
./samples/SAFE/__tmp_5c221167.c:133:24: error: missing terminating " character
  133 |                 printf("
      |                        ^
./samples/SAFE/__tmp_5c221167.c:133:17: error: expected expression at end of input
  133 |                 printf("
      |                 ^~~~~~
./samples/SAFE/__tmp_5c221167.c:133:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c221167.c:133:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c221167.c:133:17: error: expected declaration or statement at end of input
